# GallopingSIM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
HGFEM/: CMakeLists.txt  Solution_main.cpp
HGFEM/ElementCalculator/: CMakeLists.txt  CableElement.cpp  CableElement.h
HGFEM/Main/: CMakeLists.txt
HGFEM/Task/: CMakeLists.txt  Solver.cpp  Solver.h
